--- a/angular-material-test/src/app/app.component.html
+++ b/angular-material-test/src/app/app.component.html
@@ -23,3 +23,13 @@
     <p mat-line> {{note.updated | date}} </p>
   </mat-list-item>
 </mat-list>
+
+<mat-grid-list cols="4" rowHeight="100px">
+  <mat-grid-tile
+      *ngFor="let tile of tiles"
+      [colspan]="tile.cols"
+      [rowspan]="tile.rows"
+      [style.background]="tile.color">
+    {{tile.text}}
+  </mat-grid-tile>
+</mat-grid-list>
